# openmp-samples

./: readme.txt
01-openmp-install/: CMakeLists.txt  main.cpp
02-openmp-device/: CMakeLists.txt
02-openmp-simd/: main.cpp
02-openmp-simd-01/: CMakeLists.txt  main.cpp
02-openmp-simd-03/: CMakeLists.txt  main.cpp
02-openmp-simd-04/: CMakeLists.txt  main.cpp
02-openmp-simd-05/: CMakeLists.txt  main.cpp
02-openmp-simd-06-linear/: CMakeLists.txt  main.cpp
03-openmp-Data-Share-firstprivate/: CMakeLists.txt  main.cpp
03-openmp-Data-Share-lastprivate/: CMakeLists.txt  main.cpp
03-openmp-Data-Share-linear/: CMakeLists.txt
03-openmp-Data-Share-none/: CMakeLists.txt  main.cpp
03-openmp-Data-Share-private/: CMakeLists.txt  main.cpp
03-openmp-Data-Share-shared/: CMakeLists.txt  main.cpp
03-openmp-vectoradd/: CMakeLists.txt  main.cpp
04-openmp-Miscellaneous-master/: CMakeLists.txt  main.cpp
04-openmp-Miscellaneous-omp_get_wtime/: CMakeLists.txt  main.cpp
04-openmp-Miscellaneous-parallel/: CMakeLists.txt  main.cpp
05-openmp-Data-Copy-copyin/: CMakeLists.txt  main.cpp
05-openmp-Data-Copy-copyprivate/: CMakeLists.txt  main.cpp
06-openmp-sync-atomic/: CMakeLists.txt  main.cpp
06-openmp-sync-barrier/: CMakeLists.txt  main.cpp
06-openmp-sync-critical/: CMakeLists.txt  main.cpp
06-openmp-sync-nowait/: CMakeLists.txt  main.cpp
06-openmp-sync-taskgroup/: CMakeLists.txt  main.cpp
06-openmp-sync-taskwait/: CMakeLists.txt
07-openmp-reduction-reduction/: CMakeLists.txt  main.cpp
07-openmp-reduction-schedule/: CMakeLists.txt  main.cpp
07-openmp-reduction-task_reduction/: CMakeLists.txt  main.cpp
07-openmp-task-in_reduction/: CMakeLists.txt  main.cpp
08-openmp-tasking-in_reduction/: CMakeLists.txt  main.cpp
08-openmp-tasking-task/: CMakeLists.txt  main.cpp
09-openmp-teaming-num_threads/: CMakeLists.txt  main.cpp
09-openmp-teaming-omp_get_dynamic/: CMakeLists.txt  main.cpp
09-openmp-teaming-omp_get_num_threads/: CMakeLists.txt  main.cpp
09-openmp-teaming-omp_get_thread_num/: CMakeLists.txt  main.cpp
09-openmp-teaming-omp_set_num_threads/: CMakeLists.txt  main.cpp
10-openmp-for/: CMakeLists.txt  main.cpp
10-openmp-section/: CMakeLists.txt  main.cpp
10-openmp-single/: CMakeLists.txt  main.cpp
11-openmp-auto/: CMakeLists.txt  main.cpp
11-openmp-dynamic/: CMakeLists.txt  main.cpp
11-openmp-guided/: CMakeLists.txt  main.cpp
11-openmp-omp_get_schedule/: CMakeLists.txt  main.cpp
11-openmp-runtime/: CMakeLists.txt  main.cpp
11-openmp-static/: CMakeLists.txt  main.cpp
S2-01-openmp-min_max_sum_avg/: CMakeLists.txt  main.cpp
S2-02-openmp-sum_optimize-1/: CMakeLists.txt  main.cpp
S2-02-openmp-sum_optimize-taskloop/: CMakeLists.txt  main.cpp
S2-02-openmp-sum_optimize-taskloop/TimeCompute/: SteadyClock.h
S2-03-openmp-quicksort/: CMakeLists.txt  main.cpp
S2-03-openmp-quicksort-2/: CMakeLists.txt  main.cpp
S2-03-openmp-quicksort/TimeCompute/: CMakeLists.txt
S2-04-openmp-mergesort/: CMakeLists.txt  main.cpp
S2-04-openmp-mergesort/TimeCompute/: SteadyClock.cpp
